--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,8 @@ html {
 	-webkit-border-radius: 10px;
 	-o-border-radius: 10px;
 }
+
+/* mailchimp form */
+.mailchimp_form .form_field { background: #fff; border: 1px solid #888; padding: .7em 1em; margin-bottom: .5em; }
+.mailchimp_form .form_button { background: #888; color: #fff; border: 1px solid #000; font-weight: bold; }
+.mailchimp_form .form_button:hover { background: #000; }
