--- a/templates/comingsoon/style.css
+++ b/templates/comingsoon/style.css
@@ -11,13 +11,9 @@
 	margin: 0 auto;
 }
 #main-box-content header { 
-	border-top-style: none;
-	border-right-style: none;
-	border-bottom-style: solid;
-	border-left-style: none;
-	border-width: 1px;
-	border-color: #CCC;
-	background-color: white;
+	border: none;
+	border-bottom: solid 1px #CCC;
+	background-color: #FFF;
 	margin: 0;
 	position: relative;
 	width: 100%;
@@ -38,16 +34,9 @@
 	height: 46px;}
 
 #form { 
-	border-top-style: none;
-	border-right-style: none;
-	border-bottom-style: solid;
-	border-left-style: none;
-	border-width: 1px;
-	border-color: #CCC;
-	background-color: white;
-	background-image: url('img/comingsoon-bg-bottom.png');
-	background-position: center bottom;
-	background-repeat: repeat-x;
+	border: none;
+	border-bottom: solid 1px #CCC;
+	background: #FFF url('img/comingsoon-bg-bottom.png') center bottom repeat-x;
 	margin: 0;
 	position: relative;
 	width: 100%;
@@ -57,16 +46,8 @@
 .headline { font-size: 24px; font-family: georgia; font-style: italic;}
 
 .mailchimp_form {
-	border-top-style: solid;
-	border-right-style: solid;
-	border-bottom-style: solid;
-	border-left-style: solid;
-	border-width: 1px;
-	border-color: #CCC;
-	background-color: white;
-	background-image: url('img/comingsoon-bg-form.png');
-	background-position: center top;
-	background-repeat: repeat-x;
+	border: solid 1px #CCC;
+	background: #FFF url('img/comingsoon-bg-form.png') center top repeat-x;
 	padding: 20px;
 }
 
