--- a/templates/comingsoon/style.css
+++ b/templates/comingsoon/style.css
@@ -38,6 +38,7 @@
 	border-bottom: solid 1px #CCC;
 	background: #FFF url('img/comingsoon-bg-bottom.png') center bottom repeat-x;
 	margin: 0;
+	padding-bottom: 46px;
 	position: relative;
 	width: 100%;
 	height: 241px;
